# LiveDataViewModelRetrofitRoomArouterDemo

./: SOREAD.txt  build.gradle  config.gradle  configgradle.read  currency.jks  gradle.properties  medical_app.jks  settings.gradle
CordovaLib/: AndroidManifest.xml  build.gradle
app/: appgradleSetting.read  build.gradle  proguard-rules.pro  tinker-support.gradle
app/src/develop/res/values/: ic_launcher_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: strings.xml
base/: build.gradle  proguard-rules.pro
base/src/main/: AndroidManifest.xml
base/src/main/res/drawable/: base_loading_view.xml  progressbar.xml
base/src/main/res/layout/: base_loading_view_layout.xml  base_progress_layout_horizontal.xml  common_loading_view_layout.xml
base/src/main/res/values/: attr.xml  colors.xml  dimens.xml  styles.xml
bugly/: build.gradle  proguard-rules.pro
bugly/src/main/: AndroidManifest.xml
bugly/src/main/res/values/: strings.xml
common/: READ.read  SOREAD.txt  WebsActivitySetting.READ  build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/cpp/: CMakeLists.txt
common/src/main/cpp/bassdiff/: bassdiffUtils.c  bassdiffUtils.h
common/src/main/cpp/bassdiff/bassdiff/: bsdiff.c  bspatch.c
common/src/main/cpp/bassdiff/bzip2/: decompress.c
common/src/main/cpp/jpeg/: jpeg-lib.cpp
common/src/main/jni/: CMakeLists.txt  compressUtil.h  jpeg-lib.cpp
commonlibrary/: build.gradle  proguard-rules.pro
commonlibrary/src/main/: AndroidManifest.xml
ftpmodule/: build.gradle
ftpmodule/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jpegmodule/src/main/: AndroidManifest.xml
openCVLibrary343/: build.gradle
testmodule/: build.gradle
testmodule/src/main/: AndroidManifest.xml
testmodule/src/main/jni/: Android.mk  Application.mk  DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
(+259 files in other folders)
